fix(tabs): adding overflow-y to the tabs group, adding more complex scenarios with height override and full width/height grid

--- a/src/app/tabs/tabs.sample.scss
+++ b/src/app/tabs/tabs.sample.scss
@@ -5,14 +5,20 @@
     column-gap: 32px;
     row-gap: 32px;
 
-		> * {
-				display: flex;
-				flex-direction: column;
-		}
+    > * {
+        display: flex;
+        flex-direction: column;
+    }
 }
 
-.column-span {
+.fixed-height {
     grid-column: auto / span 2;
+
+    // Calc is needed to subtract the sample-title height
+    // The Users have to do the same thing if they put the tabs inside a fixed height element, which has other elements inside.
+    igx-tabs {
+        height: calc(100% - 48px)
+    }
 }
 
 .my-tab-content {
